# archiver

./: CMakeLists.txt  README.md  setup.sh
htest/: test.cpp
resources/: sample_01.txt
src/: BitStream.cpp  BitStream.hpp  Huffman.cpp  Huffman.hpp  HuffmanException.hpp  main.cpp
test/: test.cpp
